# Spider

./: .gitignore
program_files/: CMakeLists.txt
program_files/config/: config.cpp  config.h  config.ini
program_files/database/: database.cpp  database.h
program_files/http_server/: CMakeLists.txt  http_connection.cpp  http_connection.h  main.cpp  search_engine.cpp  search_engine.h
program_files/spider/: CMakeLists.txt  db_client.cpp  db_client.h  http_utils.cpp  http_utils.h  main.cpp  text_processing.cpp  text_processing.h
